--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,12 @@ body {
 	text-align: center; 
 }
 
+.backgroundImage { 
+	background-image: url(../img/wrench.png);
+	width: 400px;
+	height: 400px;
+}
+
 h1 {
 	  font-family: "Rock 3D", system-ui;
 }
