Update styles.css added rollover

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,11 @@ body {
 	height: 400px;
 }
 
+.backgroundImage: hover {
+	background-image: url(../img/clock.png);
+	cursor: crosshair; 
+}
+
 h1 {
 	  font-family: "Rock 3D", system-ui;
 }
